--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Trabajo practico para aprender los conceptos basicos de javascript">
+    <meta name="author" content="Nahuel Federico Rodriguez">
     <title>Trabajo practico de javascript</title>
 </head>
 <body>
     <!-- <script src="./js/ej-1.js"></script>
     <script src="./js/ej-2.js"></script>
     <script src="./js/ej-3.js"></script>
-    <script src="./js/ej-4.js"></script> -->
-    <script src="./js/ej-5.js"></script>
+    <script src="./js/ej-4.js"></script> 
+    <script src="./js/ej-5.js"></script> -->
+    <script src="./js/ej-6.js"></script>
 </body>
 </html>
